--- a/front/package.json
+++ b/front/package.json
@@ -36,6 +36,7 @@
     "react-dom": "^17.0.1",
     "react-icons": "^4.4.0",
     "react-jazzicon": "^1.0.4",
+    "react-minimal-pie-chart": "^8.3.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "4.0.2",
     "swiper": "^8.2.4",
